--- a/pages/structura.html
+++ b/pages/structura.html
@@ -13,7 +13,7 @@
 
         <header>
             <a href="../index.html">
-                Anime
+                Hunter x Hunter
                 <i class="fas fa-running logo"></i>
             </a>
 
