--- a/pages/structura.html
+++ b/pages/structura.html
@@ -13,20 +13,19 @@
 
         <header>
             <a href="../index.html">
-                Hunter x Hunter
-                <i class="fas fa-running logo"></i>
+                Hunter x Hunter   
             </a>
 
-            <i id="menu-btn" class="fas fa-bars" onclick="show()"></i>
+            
 
         </header>
 
         <div class="page-container">
 
             <aside id="side-menu">
-                <a href="../index.html">Home</a>
-                <a href="evenimente.html">Evenimente</a>
-                <a href="contacte.html">Contacte</a>
+                <a href="../index.html">Komanda Tasherov</a>
+                <a href="evenimente.html">Examen Hantera</a>
+                <a href="contacte.html">Top 10</a>
 
             </aside>
 
